--- a/src/ft/mod/mfg/form/DFormFormula.form
+++ b/src/ft/mod/mfg/form/DFormFormula.form
@@ -217,7 +217,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlCode">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="C&#xf3;digo:"/>
+                        <Property name="text" type="java.lang.String" value="C&#xf3;digo producto:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
                         </Property>
@@ -243,7 +243,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlName">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Nombre:"/>
+                        <Property name="text" type="java.lang.String" value="Nombre producto:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
                         </Property>
@@ -340,7 +340,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlMass">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Masa:"/>
+                        <Property name="text" type="java.lang.String" value="Masa f&#xf3;rmula:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
                         </Property>
