--- a/src/ft/gui/DGuiClientApp.form
+++ b/src/ft/gui/DGuiClientApp.form
@@ -92,9 +92,9 @@
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgUserModule">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiCfgUserProfile">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Accesos de usuarios"/>
+                <Property name="text" type="java.lang.String" value="Usuarios y perfiles"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </MenuItem>
